--- a/budgeteer.css
+++ b/budgeteer.css
@@ -8,6 +8,8 @@ h1, h2, h3, h4, h5, h6 {
 
 body.loading #expenses-table {
   display: none; }
+body.loading #expenses-chart {
+  visibility: hidden; }
 body.loading:before {
   opacity: 0.75;
   filter: alpha(opacity=75);
@@ -33,18 +35,29 @@ main header {
   font-size: 200%;
   text-align: center; }
 main form {
-  margin-top: 15px;
-  margin-bottom: 15px; }
+  position: relative;
+  margin-top: 15px; }
+  main form:after {
+    content: "";
+    display: block;
+    clear: both; }
   main form input[type="text"] {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     display: block;
-    width: 100%;
+    float: left;
     padding: 10px 0;
     border: none;
     border-bottom: 1px solid black;
     font-size: 200%; }
+    main form input[type="text"]:first-child {
+      width: 74%;
+      margin-right: 1%; }
+    main form input[type="text"]:nth-child(2) {
+      width: 25%; }
+  main form input[type="submit"] {
+    visibility: hidden; }
 main table {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   border-collapse: collapse; }
