--- a/budgeteer.sass
+++ b/budgeteer.sass
@@ -6,11 +6,15 @@ $dark: #444
 
 @import url("//fonts.googleapis.com/css?family=Actor|Faster+One")
 
+@mixin headings
+  h1, h2, h3, h4, h5, h6
+    @content
+
 header
   h1
     font-family: "Faster One"
 
-h1, h2, h3, h4, h5, h6
+@include headings
   font-family: "Actor", "Helvetica Neue", Helvetica, Arial, sans-serif
   font-weight: 300
 
@@ -36,6 +40,9 @@ h1, h2, h3, h4, h5, h6
 body.loading
   #expenses-table
     display: none
+
+  #expenses-chart
+    visibility: hidden
 
   &:before
     @include hazy(0.75)
@@ -64,18 +71,34 @@ main
     text-align: center
 
   form
+    position: relative
     margin-top: 15px
-    margin-bottom: 15px
+
+    &:after
+      content: ""
+      display: block
+      clear: both
 
     input[type="text"]
       @include border-box
 
       display: block
-      width: 100%
+      float: left
       padding: 10px 0
       border: none
       border-bottom: 1px solid black
       font-size: 200%
+
+      &:first-child
+        width: 74%
+        margin-right: 1%
+
+      &:nth-child(2)
+        width: 25%
+
+    // This is a hack!
+    input[type="submit"]
+      visibility: hidden
 
   table
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
