--- a/budgeteer.sass
+++ b/budgeteer.sass
@@ -111,6 +111,7 @@ main
     th:first-child, td:first-child
       padding-left: 0
 
+    th:nth-child(2), td:nth-child(2),
     th:last-child, td:last-child
       text-align: right
 
