--- a/app/assets/stylesheets/budgeteer.sass
+++ b/app/assets/stylesheets/budgeteer.sass
@@ -62,7 +62,7 @@ body.loading
     bottom: 0
     left: 0
     right: 0
-    background: #fff url(loading.gif) no-repeat center
+    background: #fff url(/images/loading.gif) no-repeat center
     z-index: 1
 
 main
@@ -97,11 +97,11 @@ main
       border-bottom: 1px solid black
       font-size: 200%
 
-      &:first-child
+      &:first-of-type
         width: 74%
         margin-right: 1%
 
-      &:nth-child(2)
+      &:nth-of-type(2)
         width: 25%
 
     // This is a hack!
