--- a/app/assets/stylesheets/budgeteer.sass
+++ b/app/assets/stylesheets/budgeteer.sass
@@ -73,7 +73,7 @@ body.loading
     bottom: 0
     left: 0
     right: 0
-    background: #fff url(/images/loading.gif) no-repeat center
+    background: #fff url(/assets/loading.gif) no-repeat center
     z-index: 1
 
 main
