--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
   %head
     %title Budgeteer
     = stylesheet_link_tag("kalendae.css")
-    = stylesheet_link_tag("budgeteer.css")
+    = stylesheet_link_tag("application")
     = javascript_include_tag("canvasjs.min.js")
     = javascript_include_tag("kalendae.standalone.min.js")
     = javascript_include_tag("budgeteer.js")
