--- a/app/views/home/login.html.haml
+++ b/app/views/home/login.html.haml
@@ -1,5 +1,8 @@
 = form_tag(login_path, :id => "login-form") do
-  = text_field_tag(:email, nil, :placeholder => "E-mail")
-  = password_field_tag(:password, nil, :placeholder => "Password")
-  = submit_tag("Log in")
-  = link_to("Register", register_path)
+  %fieldset
+    .field= text_field_tag(:email, nil, :placeholder => "E-mail")
+    .field= password_field_tag(:password, nil, :placeholder => "Password")
+
+  .actions
+    = submit_tag("Log in")
+    = link_to("...or register", register_path)
