--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
 
   %head
     %title Budgeteer
+    %meta(name="viewport" content="width=device-width, initial-scale=1.0")
     = stylesheet_link_tag("application")
     = javascript_include_tag("canvasjs.min.js")
     = javascript_include_tag("budgeteer.js")
